--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8">
+    <title>Photon Cycles</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <script type="application/javascript" src="assets/unity/UnityProgress.js"></script>
+    <script type="application/javascript" src="assets/unity/Build/UnityLoader.js"></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
